# taxi-data-pipeline

./: .gcloudignore  .gitignore  .pre-commit-config.yaml  .yamllint  Makefile  Pipfile  README.md  big.yaml  ci.yaml  cloudbuild.yaml  great_expectations.yml  myschema.json  ok.yaml  pyproject.toml  pytest.ini  t.sh  template.env  test.parquet  test.sh  test_x.py  x.py  xd.txt
.github/workflows/: apps.yaml  ci.yaml  components-cicd.sh  components-cicd.yaml  components_cicd.sh  docker-ci.yaml  docker-images-cicd.yaml  k8s-cicd.yaml  lambda.yaml  spark_apps.yaml  terraform.yaml  tests_ci.yaml
components/aws_lambda/: main.py  requirements.txt
components/data_validation/: data_validation.py  dv_helpers.py
components/docs_app/: Dockerfile  app.py  requirements.txt
components/ge/: data_validation.py
components/k8s_common/: aws_secrets.yaml  git-env.yaml  ingress.yaml  load_balancer.yaml  pipeline-env.yaml  pvcs.yaml  rbac.yaml  spark-operator-crd.yaml
components/lambda/: lambda.py  (+3 more)
data/: random_env.csv
docs/: New_York_Taxi_Dashboard (1).pdf:Zone.Identifier  airflow.md  components.md  scripts_dir.md  terraform.md
scripts/: create_seed.py  docker.sh  docker_cicd.sh  functions.sh  init.sh  k8s.sh  mn.ipynb  run_kafka.sh  setup.sh
secrets/: generate_random.csv  t.sh
terraform/: main.tf  providers.tf  variables.tf  versions.tf
tests/: test_airflow.py  test_airflow_addons.py  test_create_seed.py  test_docsapp.py  test_fix_schema.py  test_flaskapp.py  test_ml_helpers.py  test_parse_state.py  test_serve.py  test_spark_fns.py  test_train.py  test_validation.py
(+200 files in other folders)
