[tool.poetry]
name = "ny taxi data engineer project"
version = "0.1.0"
description = ""
authors = ["Islam Elsayed"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
pyshp = "^2.3.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-spark = "^0.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
