[tool.poetry]
name = "ny taxi data engineer project"
version = "0.1.0"
description = ""
authors = ["Islam Elsayed"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
pyshp = "^2.3.1"
streamlit = "^1.18.1"
mlflow = " ^2.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-spark = "^0.6.0"
python-dotenv = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
